--- a/mobile/www/css/style.css
+++ b/mobile/www/css/style.css
@@ -1,1 +1,19 @@
-/* Empty. Add your own CSS if you like */
+.round-button{
+  width: 200px;
+  height: 200px;
+  border-radius: 200px;
+}
+.viewPortCenter {
+  margin: auto;
+  top: 175px;
+}
+.absoluteCenter{
+  text-align: center;
+  line-height: 200px;
+  font-family: Garamond;
+  font-size: 64px;
+}
+.timeAlign{
+  top:225px;
+  left: 50px;
+}
