--- a/mobile/www/app/courses/courses.css
+++ b/mobile/www/app/courses/courses.css
@@ -15,6 +15,10 @@ ion-item.item.item-complex {
   min-height: 33%;
 }
 
+.itemHeight {
+  height: 33%;
+}
+
 .item {
   padding: 0 !important;
   border-bottom: none;
