pane 4 update, 3 checkboxes

--- a/mobile/www/app/courses/courses.css
+++ b/mobile/www/app/courses/courses.css
@@ -20,9 +20,12 @@ ion-item.item.item-complex {
   max-height: 280px;
 }
 */
-.item {
+.p2text {
   padding: 0 !important;
-  border-bottom: none;
+}
+
+.item-display {
+  font-weight: bold;
 }
 
 /*padding, css style*/
