feats: added demoMap, small tweaks to hrefs and text placement (Limited to P1/P2))

--- a/mobile/www/app/home/home.css
+++ b/mobile/www/app/home/home.css
@@ -13,3 +13,12 @@
   font-family: Garamond;
   font-size: 64px;
 }
+
+.scroll {
+    height: 100%;
+}
+ 
+#map {
+    width: 100%;
+    height: 100%;
+}
