--- a/mobile/www/lib/ionic/scss/_variables.scss
+++ b/mobile/www/lib/ionic/scss/_variables.scss
@@ -4,7 +4,7 @@
 
 $light:                           #fff !default;
 $stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
+$positive:                        #167f39 !default;
 $calm:                            #11c1f3 !default;
 $balanced:                        #33cd5f !default;
 $energized:                       #ffc900 !default;
